# bmi203_hw7

./: README.md  main.py  main2.py  pyproject.toml  random.txt
.github/workflows/: test.yml
regression/: logreg.py
test/: test_logreg.py
